feat: a bit more refactoring